--- a/syncthing/arm64/Dockerfile
+++ b/syncthing/arm64/Dockerfile
@@ -1,9 +1,10 @@
 # https://raw.githubusercontent.com/syncthing/docker/master/Dockerfile
-FROM multiarch/alpine:arm64-v3.6
+FROM multiarch/alpine:aarch64-v3.6
 
 RUN addgroup -g 1000 syncthing \
     && echo 'syncthing:x:1000:1000::/var/syncthing:/sbin/nologin' >> /etc/passwd \    
     && mkdir /var/syncthing \
+    && mkdir /var/syncthing/sync \
     && mkdir /var/syncthing/config \
     && chown -R syncthing /var/syncthing \
     && chgrp -R syncthing /var/syncthing
