--- a/syncthing/arm64/Dockerfile
+++ b/syncthing/arm64/Dockerfile
@@ -12,7 +12,7 @@ RUN addgroup -g 1000 syncthing \
 RUN apk add --update curl jq && \
     rm -rf /var/cache/apk/*
 
-ENV release= \
+ENV release=v0.14.44-rc.3 \
     arch=arm64
 
 RUN set -x \
