--- a/spark-net-dev-starter/spark-standalone/Dockerfile
+++ b/spark-net-dev-starter/spark-standalone/Dockerfile
@@ -1,8 +1,11 @@
-FROM spark-base:2.3.1
+FROM zarusz/spark-dotnet-base:latest
 
 ENV SPARK_MASTER_PORT 7077
 ENV SPARK_MASTER_WEBUI_PORT 8080
 ENV SPARK_MASTER_LOG /spark/logs
+ENV SPARK_HOME /spark
+# Run Spark process in foreground
+ENV SPARK_NO_DAEMONIZE 1
 
 EXPOSE 8080 7077 6066
 
