--- a/spark-net-dev-starter/spark-dotnet-master/docker-compose.yml
+++ b/spark-net-dev-starter/spark-dotnet-master/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.7"
 services:
   spark-master:
-    image: zarusz/spark-dotnet-standalone:latest
-    container_name: spark-master
+    image: zarusz/spark-dotnet-master:latest
+    container_name: spark-dotnet-master
     hostname: spark-master
     ports:
       - "8080:8080"
